[gd_scene load_steps=14 format=2]

[ext_resource path="res://unusedRes/Object/Fireball.gd" type="Script" id=1]
[ext_resource path="res://unusedRes/Sprites/fireball/I5050-1.png" type="Texture" id=2]
[ext_resource path="res://unusedRes/Sprites/fireball/I5050-3.png" type="Texture" id=3]
[ext_resource path="res://unusedRes/Sprites/fireball/I5050-4.png" type="Texture" id=4]
[ext_resource path="res://unusedRes/Sprites/fireball/I5050-5.png" type="Texture" id=5]
[ext_resource path="res://unusedRes/Sprites/fireball/I5050-6.png" type="Texture" id=6]
[ext_resource path="res://unusedRes/Sprites/fireball/I5050-7.png" type="Texture" id=7]
[ext_resource path="res://unusedRes/Sprites/fireball/I5050-8.png" type="Texture" id=8]
[ext_resource path="res://unusedRes/Sprites/fireball/I5050-9.png" type="Texture" id=9]
[ext_resource path="res://unusedRes/Sprites/fireball/I5050-10.png" type="Texture" id=10]
[ext_resource path="res://unusedRes/Sprites/fireball/I5050-11.png" type="Texture" id=11]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ) ],
"loop": false,
"name": "shoot",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ) ],
"loop": false,
"name": "hit",
"speed": 12.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 130, 110 )

[node name="Fireball" type="Area2D"]
position = Vector2( 400, 300 )
scale = Vector2( 0.15, 0.15 )
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "hit"
frame = 7
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 10 )
shape = SubResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
[connection signal="body_entered" from="." to="." method="_on_Fireball_body_entered"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
